analisi statica backend